# deneb

./: Cargo.toml  README.md  index.html
src/: app.rs  app_init.rs  main.rs  market.rs  market_list.rs  market_view.rs  markets.rs  trade.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: helpers.rs  main.rs  markets.rs  store.rs
types/: Cargo.toml
types/src/: lib.rs
