[package]
name = "deneb-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
log = "0.4"
wasm-logger = "0.2"
getrandom = { version = "0.2", features = ["js"] } # https://docs.rs/getrandom/0.2.2/getrandom/#indirect-dependencies
types = { path = "./types"}

[workspace]
members = ["src-tauri", "types"]

